<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Farmo</string>
    <string name="farmo_logo">Farmo Logo</string>
    <string name="username_email_or_phone">Username, email, or phone</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or">or</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="register_new_user">Register New User</string>
    <string name="account_information">Account Information</string>
    <string name="user_id">User ID*</string>
    <string name="create_password">Create Password*</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="user_type">User Type</string>
    <string name="farmer">Farmer</string>
    <string name="consumer">Consumer</string>
    <string name="personal_information">Personal Information</string>
    <string name="first_name">First Name*</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name*</string>
    <string name="dob_hint">DOB (mm/dd/yyyy)</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="choose_profile_picture">Choose Profile Picture</string>
    <string name="about_user">About User</string>
    <string name="address_information">Address Information</string>
    <string name="province">Province*</string>
    <string name="district">District*</string>
    <string name="municipality">Municipality*</string>
    <string name="ward">Ward*</string>
    <string name="tole">Tole*</string>
    <string name="contact_information">Contact Information</string>
    <string name="mobile_number">Mobile Number*</string>
    <string name="secondary_mobile">Secondary Mobile</string>
    <string name="email">Email</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="facebook">Facebook</string>
    <string name="cancel">Cancel</string>
    <string name="register_user">Register User</string>
    <string name="good_morning">Good Morning</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="good_evening">Good Evening</string>
    <string name="good_night">Good Night</string>
    <string name="UserProfile">P</string>
    <string name="search_user">Search Farmer/Consumer</string>
    <string name="rest_of_dashboard_content_goes_here">Rest of dashboard...</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="wallet_nrp">Wallet (NPR)</string>
    <string name="wallet_balance">5250.72</string>
    <string name="todays_sales">Today\'s Sales:</string>
    <string name="todays_expenses">Today\'s Expenses:</string>
    <string name="sales_amount">NRs. 200.00</string>
    <string name="verification">Verification</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="otp_sent_message">Enter the email associated with your account and we\'ll send an email with instructions to reset your password.</string>
    <string name="forgot_password_instructions">Enter the email associated with your account and we\'ll send an email with instructions to reset your password.</string>
    <string name="otp_timer">Code expires in 02:00</string>
    <string name="resend_code">Resend Code</string>
    <string name="verify">Verify</string>
    <string name="create_new_password">Create New Password</string>
    <string name="reset_password_instruction">Your new password must be different\nfrom previous used passwords.</string>
    <string name="new_password">New Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="verify_identity">Verify Identity</string>
    <string name="identify_user_instructions">Please enter your registered username or phone number to identify your account.</string>
    <string name="username_or_phone">username or phone number</string>
    <string name="identify_user">Identify User</string>
    <string name="cant_remember_details">Can\'t remember your details? %1$s</string>
    <string name="contact_farmo_support">Contact Farmo Support</string>
    <string name="greeting">Greeting</string>
    <string name="see_all">See all</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="load">Load</string>
    <string name="withdraw">Withdraw</string>
    <string name="send_money">Send Money</string>
    <string name="receive">Receive</string>
    <string name="pay_farmer">Pay Farmer</string>
    <string name="order_payment">Order Payment</string>
    <string name="npr">NPR</string>

    <string name="refresh_wallet">Refresh Wallet</string>
    <string name="add_product">Add Product</string>
    <string name="add_nproduct">Add\nProduct</string>
    <string name="astrix_balance">*****</string>
    <string name="open_eye">Open Eye</string>
    <string name="today_s_income">Today\'s Income:</string>
    <string name="nearby_top_rated_farmers">Nearby Top Rated Farmers</string>
    <string name="_5_km"><![CDATA[5 km >]]></string>
    <string name="_5star">★★★★★</string>
    <string name="userid">userid</string>
    <string name="activate_account">Activate Account</string>
    <string name="please_change_your_temporary_password_to_activate_your_account">Please change your temporary password to activate your account.</string>
    <string name="current_password">Current Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="wallet">Wallet</string>
    <string name="transaction_statements">Transaction Statements</string>

    <!-- Change Password Dialog -->
    <string name="change_login_password">Change Login Password</string>
    <string name="password_rules_title">Choose a strong password by\nfollowing these rules:</string>
    <string name="password_rules_content">1. Password must be 8-15 characters only\n2. Password must contain alpha-numeric value with at least 1 character, 1 number and 1 special character.</string>
    <string name="current_password_label">Current Password</string>
    <string name="new_password_label">New Password</string>
    <string name="confirm_new_password_label">Confirm New Password</string>
    <string name="proceed">Proceed</string>

    <string name="search_bazar">Search in Bazar...</string>
    <string name="bazar_market_place">Bazar [Market Place]</string>
    <string name="see_more">See More ▼</string>
</resources>